--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "node-typescript-boilerplate",
-  "version": "0.0.0",
-  "description": "Minimalistic boilerplate to quick-start Node.js development in TypeScript.",
+  "name": "andro-m-parser",
+  "version": "0.0.1",
+  "description": "NodeJS script to create new entries for AndroMoney",
   "type": "module",
   "engines": {
-    "node": ">= 20.9 < 21"
+    "node": ">= 20"
   },
   "devDependencies": {
     "@types/jest": "~29.5",
@@ -22,6 +22,7 @@
     "typescript": "~5.3"
   },
   "scripts": {
+    "debug": "npm run build && node build/src/main.js",
     "start": "node build/src/main.js",
     "clean": "rimraf coverage build tmp",
     "prebuild": "npm run lint",
@@ -33,8 +34,7 @@
     "prettier": "prettier --config .prettierrc --write .",
     "test:watch": "jest --watch"
   },
-  "author": "Jakub Synowiec <jsynowiec@users.noreply.github.com>",
-  "license": "Apache-2.0",
+  "license": "MIT",
   "dependencies": {
     "tslib": "~2.6"
   },
